Fixed table alignment issue on search page; add search CSS styles to main.css since they wouldn't get picked up if EMBED wasn't set if they are specified in the template.

--- a/idldoc/src/resources/main.css
+++ b/idldoc/src/resources/main.css
@@ -76,7 +76,6 @@ table.box {
 }
 table.attribute { padding-left: 0.75em; padding-right: 0.75em; }
 table td { vertical-align: top; }
-form table td { vertical-align: middle; }
 table.attribute p { margin: 0; }
 table td.name { font-style: normal; padding-right: 1.5em; }
 ul.fieldslist { padding-top: 0; color: #909090; }
@@ -95,6 +94,13 @@ table.navbar td.selected, table.navbar td.selected a { color: white; }
 table.navbar a:hover, table.navbar a:focus { background: inherit; border-bottom: 1px solid #303099; }
 p.localnavbar { text-align: right; margin: 0.2em 1em 0.2em 0.2em; padding: 0; }
 
+/* search styles */
+fieldset { border: #ddd 1px solid; padding: 1em; margin-top: 3em; }
+legend { color: #900000; font-size: 120%; }
+label { white-space: nowrap; }
+p.description { margin: 2em 10em 1em 2em; }
+form table td.name { vertical-align: middle; }
+      
 /* footer styles */
 div.footer { padding: 0.5em 1em 0.5em 1em; background: #EFEFEF; border-top: 1px #A0A0A0 dotted; }
 div.footer table { width: 100%; }
